fix navigation, no longer jumps and hide the title, now jumps a little above it

--- a/components/Tutorials/Tutorials.module.css
+++ b/components/Tutorials/Tutorials.module.css
@@ -1,6 +1,12 @@
 .container {
+  position: relative;
   width: min(90%, 1300px);
   margin-bottom: var(--large-vertical-spacing);
+}
+
+.nav_target {
+  position: absolute;
+  top: calc(-1 * var(--h2-font-size));
 }
 
 .title {
